src/components/30-organisms/commercial-hero-banner/child.scss
// TODO Use stuff from typography file as soon as it is ready, instead of
// hardcoding the whole typography manually.
axa-commercial-hero-banner {
  color: $color-prim-gray-dark;

  axa-button,
  axa-button-link {
    display: inline-block;

    margin-top: 28px;
    margin-right: 23px;
  }

  axa-button:last-child,
  axa-button-link:last-child {
    margin-top: 28px;
    margin-right: 0;
  }

  h2 {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 12px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 1.5;
    letter-spacing: 0.02em;

    @include breakpoint($mediaquery-sm-up) {
      font-size: 14px;
      line-height: 1.21;
    }
  }

  h1 {
    font-family: $font-family-publico;
    font-size: 24px;
    font-weight: 700;
    line-height: 1.17;
    letter-spacing: -0.01em;

    @include breakpoint($mediaquery-sm-up) {
      font-size: 36px;
      line-height: 1.13;
      letter-spacing: 0.015em;
    }

    @include breakpoint($mediaquery-lg-up) {
      font-size: 48px;
    }
  }

  p {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.02em;

    @include breakpoint($mediaquery-sm-up) {
      font-size: 16px;
    }
  }

  small {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 13px;
    font-weight: 400;
    line-height: 18px;
  }
}

